--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giphy/js-fetch-api": "^4.7.1",
+    "@giphy/react-components": "^6.5.2",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "boring-avatars": "^1.7.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "10.4.0-beta.1",
+    "swr": "^2.0.3",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "sass": "^1.57.1"
   }
 }
