--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@giphy/js-fetch-api": "^4.7.1",
     "@giphy/react-components": "^6.5.2",
     "@next/font": "13.1.1",
+    "@stripe/stripe-js": "^1.46.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -26,6 +27,8 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@lexical/react": "^0.7.6",
+    "lexical": "^0.7.6",
     "sass": "^1.57.1"
   }
 }
