--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@giphy/react-components": "^6.5.2",
     "@next/font": "13.1.1",
     "@stripe/stripe-js": "^1.46.0",
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
+    "@supabase/supabase-js": "^2.5.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
